correction ie8 pour les boites du menui du home -> pas de coins arrondis pour topi mon gars, trop le borderl pour gérer arrondis les differents background dans un box

--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -27,8 +27,9 @@ html{width:100%; background: #63b362;margin:0 auto;padding:0}
 body {
 	background:#ffffff;
 	border-radius: 1em;
+	behavior: url(/PIE.htc);
 	max-width:1100px;
-	min-width:940;
+	min-width:945px;
 	width: auto;
 	/*margin: 0 	0 0 17.5em;*/
 	margin : 0 auto;
@@ -181,6 +182,8 @@ h1.h1{
 
 /*Menus*/
 
+
+
 .extra2.liste-items, extra2.liste-items .item {
     border-bottom: 0 none;
     border-top: 0 none;
@@ -210,6 +213,8 @@ h1.h1{
  }
 
 
+/*Home*/
+
 .home .menu{
 	position:absolute;
 	z-index:200
@@ -226,7 +231,6 @@ ul.box_menu li.item{
 	position:relative;
 	background: none repeat scroll 0 0 #63B362;
     border-radius: 0.4em;
-    behavior: url(/PIE.htc);
     float: left;
     margin: 0 0.12em 0.3em 0.12em;
     padding: 0;
@@ -234,20 +238,69 @@ ul.box_menu li.item{
     height:244px;
     width: 244px;
     font-size:2.5em;
-    overflow:hidden;}
+    overflow:hidden;
+
+    }
     
-ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text, ul.box_menu li.item:hover img,ul.box_menu li.item:hover dt, ul.box_menu li.item:hover dd, ul.box_menu li.item:hover dl{
+ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text,ul.box_menu li.item:hover dt, ul.box_menu li.item:hover dd, ul.box_menu li.item:hover dl{
 	opacity:1;
 	filter: alpha(opacity = 100);
-    border-radius: 0.4em;
-    behavior: url(/PIE.htc);	
+	background-color: #63B362;
+ 	border-bottom-left-radius: 0.4em;
+ 	border-bottom-right-radius: 0.4em; 	
+
+	
 	}
+	
+.box_menu .item .titre{
+	line-height:2.5em;
+}
+
+ ul.box_menu li.item:hover .titre{
+	background:#99cc66;
+	border-top-left-radius: 0.4em;
+ 	border-top-right-radius: 0.4em;
+
+}
+
+ ul.box_menu li.item li{
+  	line-height:2.5em;
+ } 
+
+ul.box_menu li .text{
+	background-color: #969583;
+	height:	164px;
+ 	opacity:1;
+ 	filter: alpha(opacity = 100);
+ 	line-height: 0.8em;
+ 	border-bottom-left-radius: 0.4em;
+ 	border-bottom-right-radius: 0.4em; 	
+
+}
+
+	
+ul.box_menu li .text p{
+	font-size:0.7em;
+	color:white;
+	text-align:center;
+	padding:2em 0.3em;
+}
     	
+/*Home Packs*/
  ul.box_menu li.item ul{
 	height:164px;
  	background:none;
  	padding-bottom:1em;
  }
+ 
+ul.box_menu li.item:hover ul{
+ 	background:#edc831;
+ 	border-bottom-left-radius: 0.4em;
+ 	border-bottom-right-radius: 0.4em;	
+ 	padding-bottom:0;
+ 	
+ }
+ 
  
   ul.box_menu li.item ul li.row_1{
   	background:#f1d142;
@@ -256,32 +309,24 @@ ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text, ul.box_menu li.it
   
  ul.box_menu li.item ul li.row_1 a{color:#eec831;} 
  
+
+ 
  ul.box_menu li.item ul li.row_2{
  	background:#edc831;
  	border-bottom-left-radius: 0.4em;
  	border-bottom-right-radius: 0.4em;
-	padding-bottom:0.05em
+	padding-bottom:0.05em ;
  	}
-  ul.box_menu li.item:hover ul li.row_2{
-	background:#edc831;
-  	border-bottom-left-radius: 0.4em;
- 	border-bottom-right-radius: 0.4em;	
-  	}
+
  
  ul.box_menu li.item ul li.row_2 a{color:#f9ed72;}
  
 
-
-ul.box_menu li.item:hover .titre{
-	background:#99cc66;
-	border-top-left-radius: 0.4em;
- 	border-top-right-radius: 0.4em;
-}
-
+/*Home Actus*/
 ul.box_menu dl {
 	background:#e93eda;
 	text-align:left;
-	padding-left:0.3em;
+	padding:0.3em 0 0 0.3em;
 	margin:0;
 	height:	164px;
  	border-bottom-left-radius: 0.4em;
@@ -292,14 +337,14 @@ ul.box_menu dt, ul.box_menu dd{
 	filter: alpha(opacity = 10);
 }	
 
-ul.box_menu dl dt{font-weight:normal; font-size:0.9em}
+ul.box_menu dl dt{font-weight:normal; font-size:0.8em}
 
 ul.box_menu dl .spip_logos{
 	margin: 0 0.2em 0.1em 0;
 	}
 
 ul.box_menu dl p {
-    font-size: 0.6em;
+    font-size: 0.5em;
 	margin:0;
 	padding:0;
 }
@@ -309,16 +354,8 @@ ul.box_menu dd {
     margin:0.3em 0 0 0;
 }
 
- ul.box_menu li.item li{
-  	line-height:2.5em;
-  	
- } 
  
-ul.box_menu li.site_slider{	
-
-	
-}
-
+/*Home Réalisations -Slider*/
 ul.box_menu li.site_slider .slider{
 	text-align: center;
 	background-color:#7ca2ed;
@@ -328,35 +365,33 @@ ul.box_menu li.site_slider .slider{
  	border-bottom-right-radius: 0.4em;
 }
 
-ul.box_menu li.site_slider #sjcycle_sites{
+ul.box_menu li.site_slider .sjcycle_sites{
+	background-color:transparent;
 	background-image: url("images/screen.png");
 	background-repeat:no-repeat;
 	background-position: 0 0.1em ;	
 	opacity:0.2;
-	filter: alpha(opacity = 20);
+
 }
 
-ul.box_menu li.site_slider:hover .slider{
+ul.box_menu li.site_slider:hover .slider,ul.box_menu li.site_slider:hover  .sjcycle_sites{
 		background-color:#64b362;
 }
 
-ul.box_menu li.site_slider:hover #sjcycle_sites,ul.box_menu li.site_slider:hover #sjcycle_sites a:hover, ul.box_menu li.item:hover .images{
+ul.box_menu li.site_slider:hover .sjcycle_sites,ul.box_menu li.site_slider:hover .sjcycle_sites a:hover, ul.box_menu li.item:hover .images{
 	opacity:1;
 	filter: alpha(opacity = 100);
 }
-  
- ul.box_menu li.site_slider #sjcycle_sites a{
 
-}
-  
-ul.box_menu li.site_slider #sjcycle_sites img{
+ul.box_menu li.site_slider .sjcycle_sites img{
 	opacity:2;
 	filter: alpha(opacity = 20);
 	position:relative;
 	top:0.3em;
 	left:0.14em;
 	}
-        
+
+/*Home logo auteurs*/
 ul.box_menu li.logo{padding :0}
 
 ul.box_menu li.logo img{
@@ -382,29 +417,29 @@ ul.box_menu li.logo_auteurs .image{
 	z-index:20}	
 	
 ul.box_menu li.logo_auteurs img{
--webkit-filter: grayscale(100%);
--moz-filter: grayscale(100%);
--ms-filter: grayscale(100%);
--o-filter: grayscale(100%);
-filter: url(images/desaturate.svg#greyscale);
-filter: grayscale(100%);
-filter: gray;
-z-index:10;
-border-bottom-right-radius: 0.4em;
-border-bottom-left-radius: 0.4em;
+	-webkit-filter: grayscale(100%);
+	-moz-filter: grayscale(100%);
+	-ms-filter: grayscale(100%);
+	-o-filter: grayscale(100%);
+	filter: url(images/desaturate.svg#greyscale);
+	filter: grayscale(100%);
+	filter: gray;
+	z-index:10;
+	border-bottom-right-radius: 0.4em;
+	border-bottom-left-radius: 0.4em;
 }
 
-ul.box_menu li.item:hover img{
--webkit-filter: grayscale(0%);
--moz-filter: grayscale(0%);
--ms-filter: grayscale(0%);
--o-filter: grayscale(0%);
-filter: none;
-filter: grayscale(0%);
-background-color:#64b362;
-z-index:10;
-border-bottom-right-radius: 0.4em;
-border-bottom-left-radius: 0.4em;
+ul.box_menu li.logo_auteurs:hover img{
+	-webkit-filter: grayscale(0%);
+	-moz-filter: grayscale(0%);
+	-ms-filter: grayscale(0%);
+	-o-filter: grayscale(0%);
+	filter: none;
+	filter: grayscale(0%);
+	background-color:#64b362;
+	z-index:10;
+	border-bottom-right-radius: 0.4em;
+	border-bottom-left-radius: 0.4em;
 }
 
 
@@ -415,35 +450,12 @@ border-bottom-left-radius: 0.4em;
 ul.box_menu li.end{
 	margin-right:0
 }
-
-.box_menu .item .titre{
-	line-height:2.5em;
-}
+/*Home dfecriptif*/
 
 ul.box_menu li.descriptif .titre{
 	visibility: hidden;
 }
 
-
-
-
-ul.box_menu li .text{
-	background-color: #969583;
-	height:	164px;
- 	opacity:1;
- 	filter: alpha(opacity = 100);
- 	line-height: 0.8em;
- 	border-bottom-left-radius: 0.4em;
- 	border-bottom-right-radius: 0.4em; 	
-}
-
-	
-ul.box_menu li .text p{
-	font-size:0.7em;
-	color:white;
-	text-align:center;
-	padding:2em 0.3em;
-}
 
 ul.box_menu li.descriptif .text{
 	background-color:#64b362;
@@ -457,7 +469,7 @@ ul.box_menu li.descriptif .text p{
 	line-height: 0.8em;
 }
 
-
+/*extra2 menu vertical*/
 .extra2 .liste-items li.on{
 	background-color:transparent;
 	border-right:none;
@@ -470,13 +482,11 @@ ul.box_menu li.descriptif .text p{
 .extra2 .liste-items li.first{
 	border-top:none;
 	border-radius: 0.4em 0 0 0 ;
-	behavior: url(/PIE.htc);
 	}  
 	 
 .extra2 .liste-items li.last{
 	border-bottom:#FFFFFF 0.2em solid;
 	border-bottom-right-radius: 0.5em;
-	behavior: url(/PIE.htc);
 	}   
     
 
@@ -699,10 +709,11 @@ aside.prix {
     color: #63B362;
     font-size: 1.2em;
     padding: 0.2em;
-    position: absolute;
-    right: 1em;
+    position: relative;
+    right: 0.5em;
     text-align: right;
-    width: 8%;}
+    float:right;
+    width: 5em}
 /*Liens*/
 a {
     color: #63b362;
